# hse_system_developing

./: .gitignore  README.md
Hash_md5/Hash_md5/: CMakeLists.txt  Readme.md  bidirectionalpipe.cpp  bidirectionalpipe.h  childsession.cpp  childsession.h  ipcexceptions.cpp  ipcexceptions.h  main.cpp  md5calcer.cpp  md5calcer.h  parentsession.cpp  parentsession.h  threadguard.h  threadstatus.cpp  threadstatus.h
algo/boxes/: CMakeLists.txt  CalculateDP.cpp  CalculateDP.hpp  TaskInput.cpp  TaskInput.hpp  main.cpp
algo/simplex/: main.py  main2.py
hide/hide/: main.cpp
module1/Hash_md5/Hash_md5/: CMakeLists.txt  bidirectionalpipe.h  main.cpp  md5calcer.cpp  threadguard.cpp  utils.cpp
module1/hide/hide/: CMakeLists.txt
module1/stash/stash/: CMakeLists.txt
module2/cats/: CMakeLists.txt  README.md  analysis.txt  main.cpp
module2/cats/Cats/: CMakeLists.txt  Cats.cpp  Cats.hpp  IRegistry.hpp  UniqueRegistry.cpp  UniqueRegistry.hpp
module2/cats/Client/: CMakeLists.txt  Client.cpp  Client.hpp  ClientSession.cpp  ClientSession.hpp  SessionParams.hpp
module2/cats/Executor/: BaseExecutor.cpp  BaseExecutor.hpp  CMakeLists.txt  IExecutor.cpp  IExecutor.hpp  IResourceProvider.cpp  IResourceProvider.hpp  StrandExecutor.cpp  StrandExecutor.hpp
stash/stash/: CMakeLists.txt  Readme.md  gammagenerator.cpp  gammagenerator.h  main.cpp
